# optima-license-manager

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8ce721e374d4_initial_organization_and_user_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py
backend/app/core/: db.py  security.py
backend/app/models/: auth.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
docs/: ARCHITECTURE.md  CLASS_DIAGRAM.md  DATABASE.md  PRD.md  ROADMAP.md
docs/adr/: ADR-001-backend-framework.md  ADR-002-headless-architecture.md  ADR-003-database-engine.md  ADR-004-internationalization.md  ADR-005-backend-tooling.md  ADR-006-pydantic-validation.md  ADR-007-frontend-state-management.md  ADR-008-styling-design-system.md  ADR-009-api-mocking-strategy.md  ADR-010-frontend-qa-strategy.md  ADR-011-frontend-tooling.md  ADR-012-sql-model-for-data-modeling-and-persistency.md
docs/api-contracts/: auth.md
docs/design/: A11Y.md  COPYWRITING.md  DESIGN_SYSTEM.md  USER_FLOWS.md
docs/development/: DEVLOG.md
docs/research/: RESEARCH.md
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package.json
frontend/docs_fe/: DEVLOG_FE.md
frontend/src/: proxy.ts
frontend/src/app/[locale]/: globals.css  layout.tsx  page.tsx
frontend/src/i18n/: navigation.ts  request.ts
frontend/src/lib/: api-errors.ts
frontend/src/messages/: en.json  es.json
frontend/src/mocks/: handlers.ts
(+11 files in other folders)
